moving files into folders

--- a/index.html
+++ b/index.html
@@ -76,24 +76,24 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">This is<br />
-										Post #1</a></h2>
+										<span class="date">Automation</span>
+										<h2>
+											<a href="#">Creating and Using Mapkeys in PTC Creo</a>
+										</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In Creo Parametric, Mapkeys function is such a powerful tool which allows us to automate and complete our tasks so much faster. In this post, I will show what I know about Mapkeys as well as how I put it into use in my daily basis.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">Mechanical 101</span>
+										<h2><a href="#">Geometric Dimensioning and Tolerancing</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This post is a brief introduction of GD&T. However, I will try to recap the important information about the subject.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full</a></li>
 									</ul>
