Initial commit for portfolio website

--- a/blog.html
+++ b/blog.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Your Name - Portfolio</title>
+  <title>Blog - Your Name</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>BS Mechanical Engineer | AI Enthusiast | Self-Taught Software Builder</p>
+    <h1>Blog</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -20,9 +19,14 @@
     </nav>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hello, I'm a BS Mechanical Engineer with a passion for AI and software development. I combine engineering expertise with innovative technology to solve real-world problems.</p>
+  <section id="posts">
+    <article>
+      <h2>My First Blog Post</h2>
+      <p class="date">Posted on March 16, 2025</p>
+      <p>This post introduces my journey in engineering, AI, and software development. Follow along for insights, tips, and project updates!</p>
+      <a href="#">Read More</a>
+    </article>
+    <!-- Add more blog posts as needed -->
   </section>
 
   <footer>
