--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Header / Navigation -->
   <header>
     <div class="container header-container">
-      <h1 class="logo">Your Name</h1>
+      <h1 class="logo">Edward</h1>
       <nav>
         <ul class="nav-list">
           <li><a href="#hero" class="nav-link active">Home</a></li>
