--- a/blog.html
+++ b/blog.html
@@ -213,6 +213,7 @@
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </nav>
+      <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     </div>
   </header>
   
@@ -323,6 +324,17 @@
         });
       });
     });
+  </script>
+  <script>
+    (function() {
+      const toggleBtn = document.getElementById('darkModeToggle');
+      const prefersDark = localStorage.getItem('darkMode') === 'true';
+      if (prefersDark) document.body.classList.add('dark-mode');
+      toggleBtn.addEventListener('click', function () {
+        document.body.classList.toggle('dark-mode');
+        localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));
+      });
+    })();
   </script>
 </body>
 </html>
