--- a/blog1.html
+++ b/blog1.html
@@ -249,6 +249,7 @@
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </nav>
+      <button id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     </div>
   </header>
   
@@ -338,11 +339,22 @@
     
     // Reading progress bar
     window.addEventListener('scroll', function () {
-      const progressBar = document.getElementById('progressBar');
-      const totalHeight = document.body.scrollHeight - window.innerHeight;
-      const progress = (window.scrollY / totalHeight) * 100;
-      progressBar.style.width = progress + '%';
-    });
+    const progressBar = document.getElementById('progressBar');
+    const totalHeight = document.body.scrollHeight - window.innerHeight;
+    const progress = (window.scrollY / totalHeight) * 100;
+    progressBar.style.width = progress + '%';
+  });
+  </script>
+  <script>
+    (function() {
+      const toggleBtn = document.getElementById('darkModeToggle');
+      const prefersDark = localStorage.getItem('darkMode') === 'true';
+      if (prefersDark) document.body.classList.add('dark-mode');
+      toggleBtn.addEventListener('click', function () {
+        document.body.classList.toggle('dark-mode');
+        localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));
+      });
+    })();
   </script>
 </body>
 </html>
